Menambahkan responsif slider

--- a/style.css
+++ b/style.css
@@ -34,14 +34,8 @@ p, h1, h2, h3, h4, h5, form, iframe, a {
     }
 }
 
-
-
 .carousel-item {
     height: 91vh;
-    /* min-height: 300px; */
-    /* width: 100%;
-    height: auto;
-    max-height: 90vh; */
 }
 .c-img {
     height: 100%;
@@ -50,9 +44,17 @@ p, h1, h2, h3, h4, h5, form, iframe, a {
 }
 .carousel-caption {
     font-family: 'Palatino';
-    top: 220px;
-    
-    /* top: 50%; */
+    top: 40%;
+}
+@media (max-width: 767px) {
+    .carousel-caption {
+        top: 30%;
+    }
+}
+@media (max-width: 375px) {
+    .carousel-caption {
+        top: 20%;
+    }
 }
 .carousel-caption h4 {
     font-size: 3rem;
